--- a/styles.css
+++ b/styles.css
@@ -627,8 +627,8 @@ body {
   position: fixed;
   right: 0;
   bottom: 0;
-  min-width: 100%;
-  min-height: 100%;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 /* Add some content at the bottom of the video/page */
@@ -637,7 +637,7 @@ body {
   bottom: 0;
   background: rgba(0, 0, 0, 0.5);
   color: #f1f1f1;
-  width: 100%;
+  max-width: 100%;
   padding: 20px;
 }
 
@@ -671,7 +671,7 @@ body {
   z-index: 99; /* Make sure it does not overlap */
   border: none; /* Remove borders */
   outline: none; /* Remove outline */
-  background-color: rgba(140, 0, 255, 0.233); /* Set a background color */
+  background-color: rgb(76, 0, 255); /* Set a background color */
   color: white; /* Text color */
   cursor: pointer; /* Add a mouse pointer on hover */
   padding: 15px; /* Some padding */
