--- a/styles.css
+++ b/styles.css
@@ -378,75 +378,72 @@ body {
 /* CSS START*/
 
 .background000{
-  background: black;
-  border-style: solid;
-  opacity: 100%;
-  }
+background: black;
+border-style: solid;
+opacity: 100%;
+}
 
-  image.centered{
+.imageround{
+display: block;
+margin-left: auto;
+margin-right: auto;
+border-radius: 40%;
+}
+
+#PLayout1{
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  }
-
-  #PLayout1{
-    display: block;
-    font-size: 1.5rem;
-    color: #fff;
-    text-align: center;
-    margin-right: 120em;
-    margin-left: 120em; 
-  }
-
-  #Section{
-    display: block;
-    font-size: 1rem;
-    color: rgb(255, 255, 255);
-    text-align: center;
-  }
-
-  #Section2{
-    display: block;
-    font-size: 0.90rem;
-    color: rgb(0, 0, 0);
-    text-align: center;
-    }
-
-  .image1 {
-    width: 60%;
+  font-size: 1.5rem;
+  color: #fff;
+  text-align: center;
+  margin-right: 120em;
+  margin-left: 120em; 
 }
 
-#row2{
-  content: "";
-  display: table;
-  clear: both;
+#Section{
+  display: block;
+  font-size: 1rem;
   color: rgb(255, 255, 255);
+  text-align: center;
 }
+
+#Section2{
+  display: block;
+  font-size: 0.90rem;
+  color: rgb(0, 0, 0);
+  text-align: center;
+  }
+
+.image1 {
+  width: 60%;
+}
+
+
 
 /* Six columns side by side */
 .column33 {
   float: left;
-  width: 33%;
+  width: 33.33%;
+  padding: 10px;
 }
 
 .container3 {
-  
-  margin: 10px;
-  width: 250px;
-  height: 250px;
-  left: auto;
-  right: auto;
-  line-height: 115px;
-  text-align: center;
-  border: 1px solid black;
+
+margin: 10px;
+width: 250px;
+height: 250px;
+left: auto;
+right: auto;
+line-height: 115px;
+text-align: center;
+border: 1px solid black;
 }
 .resize_fit_center {
-  max-width:100%;
-  left: auto;
-  right: auto;
-  max-height:100%;
-  text-align: center;
-  vertical-align: middle;
+max-width:100%;
+left: auto;
+right: auto;
+max-height:100%;
+text-align: center;
+vertical-align: middle;
 }
 
 /* CSS END */
@@ -459,91 +456,91 @@ body {
 /*CSS Start*/
 
 .background000{
-  background: black;
-  border-style: solid;
-  opacity: 100%;
-  }
+background: black;
+border-style: solid;
+opacity: 100%;
+}
 
-  image.centered{
+image.centered{
+display: block;
+margin-left: auto;
+margin-right: auto;
+}
+
+#PLayout1{
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  font-size: 1.5rem;
+  color: #fff;
+  text-align: center;
+  margin-right: 120em;
+  margin-left: 120em; 
+}
+
+#HLayout1{
+  display: block;
+  font-size: 2.5rem;
+  color: #fff;
+  text-align: center; 
+}
+
+#Section{
+  display: block;
+  font-size: 1rem;
+  color: rgb(255, 255, 255);
+  text-align: center;
+}
+
+#Section2{
+  display: block;
+  font-size: 0.90rem;
+  color: rgb(0, 0, 0);
+  text-align: center;
   }
 
-  #PLayout1{
-    display: block;
-    font-size: 1.5rem;
-    color: #fff;
-    text-align: center;
-    margin-right: 120em;
-    margin-left: 120em; 
-  }
-
-  #HLayout1{
-    display: block;
-    font-size: 2.5rem;
-    color: #fff;
-    text-align: center; 
-  }
-
-  #Section{
-    display: block;
-    font-size: 1rem;
-    color: rgb(255, 255, 255);
-    text-align: center;
-  }
-
-  #Section2{
-    display: block;
-    font-size: 0.90rem;
-    color: rgb(0, 0, 0);
-    text-align: center;
-    }
-
-  .image1 {
-    width: 60%;
+.image1 {
+  width: 60%;
 }
 
 #row2{
-  content: "";
-  display: table;
-  clear: both;
-  color: rgb(255, 255, 255);
+content: "";
+display: table;
+clear: both;
+color: rgb(255, 255, 255);
 }
 
 .container3 {
-  
-  margin: 10px;
-  width: 250px;
-  height: 250px;
-  line-height: 115px;
-  text-align: center;
-  border: 1px solid black;
+
+margin: 10px;
+width: 250px;
+height: 250px;
+line-height: 115px;
+text-align: center;
+border: 1px solid black;
 }
 .resize_fit_center {
-  max-width:100%;
-  max-height:100%;
-  text-align: center;
-  vertical-align: middle;
+max-width:100%;
+max-height:100%;
+text-align: center;
+vertical-align: middle;
 }
 .centerr{
-  justify-content: center;
-  padding: 3rem;
-  color:  #000;
-  align-items: center;
-  text-align: center;
+justify-content: center;
+padding: 3rem;
+color:  #000;
+align-items: center;
+text-align: center;
 
 }
 
 .centerr h1 {
-  margin-bottom: 1rem;
-  font-size: 5rem;
+margin-bottom: 1rem;
+font-size: 5rem;
 }
 
 .centerr p {
-  margin-bottom: 2rem;
-  font-size: 3rem;
-  line-height: 1.5;
+margin-bottom: 2rem;
+font-size: 3rem;
+line-height: 1.5;
 }
 
 /*CSS End*/
@@ -555,49 +552,49 @@ body {
 /*CSS Start*/
 
 .background000{
-  background: black;
-  border-style: solid;
-  opacity: 100%;
-  }
+background: black;
+border-style: solid;
+opacity: 100%;
+}
 
-  image.centered{
+image.centered{
+display: block;
+margin-left: auto;
+margin-right: auto;
+}
+
+#PLayout1{
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  font-size: 1.5rem;
+  color: #fff;
+  text-align: center;
+  margin-right: 120em;
+  margin-left: 120em; 
+}
+
+#HLayout1{
+  display: block;
+  font-size: 2.5rem;
+  color: #fff;
+  text-align: center; 
+}
+
+#Section{
+  display: block;
+  font-size: 1rem;
+  color: rgb(255, 255, 255);
+  text-align: center;
+}
+
+#Section2{
+  display: block;
+  font-size: 0.90rem;
+  color: rgb(0, 0, 0);
+  text-align: center;
   }
 
-  #PLayout1{
-    display: block;
-    font-size: 1.5rem;
-    color: #fff;
-    text-align: center;
-    margin-right: 120em;
-    margin-left: 120em; 
-  }
-
-  #HLayout1{
-    display: block;
-    font-size: 2.5rem;
-    color: #fff;
-    text-align: center; 
-  }
-
-  #Section{
-    display: block;
-    font-size: 1rem;
-    color: rgb(255, 255, 255);
-    text-align: center;
-  }
-
-  #Section2{
-    display: block;
-    font-size: 0.90rem;
-    color: rgb(0, 0, 0);
-    text-align: center;
-    }
-
-  .image1 {
-    width: 60%;
+.image1 {
+  width: 60%;
 }
 
 #row2{
@@ -605,7 +602,7 @@ body {
   display: table;
   clear: both;
   color: rgb(255, 255, 255);
-}
+  }
 
 .container3 {
   margin: 10px;
@@ -616,7 +613,7 @@ body {
   line-height: 115px;
   text-align: center;
   border: 1px solid black;
-}
+  }
 .resize_fit_center {
   max-width:100%;
   left: auto;
@@ -624,7 +621,7 @@ body {
   max-height:100%;
   text-align: center;
   vertical-align: middle;
-}
+  }
 
 /*CSS End*/
 
@@ -633,23 +630,23 @@ body {
 /*     Back To Top Button     */
 /******************************/
 #myBtn {
-  display: none; /* Hidden by default */
-  position: fixed; /* Fixed/sticky position */
-  bottom: 20px; /* Place the button at the bottom of the page */
-  right: 30px; /* Place the button 30px from the right */
-  z-index: 99; /* Make sure it does not overlap */
-  border: none; /* Remove borders */
-  outline: none; /* Remove outline */
-  background-color: rgb(76, 0, 255); /* Set a background color */
-  color: white; /* Text color */
-  cursor: pointer; /* Add a mouse pointer on hover */
-  padding: 15px; /* Some padding */
-  border-radius: 10px; /* Rounded corners */
-  font-size: 18px; /* Increase font size */
+display: none; /* Hidden by default */
+position: fixed; /* Fixed/sticky position */
+bottom: 20px; /* Place the button at the bottom of the page */
+right: 30px; /* Place the button 30px from the right */
+z-index: 99; /* Make sure it does not overlap */
+border: none; /* Remove borders */
+outline: none; /* Remove outline */
+background-color: rgb(76, 0, 255); /* Set a background color */
+color: white; /* Text color */
+cursor: pointer; /* Add a mouse pointer on hover */
+padding: 15px; /* Some padding */
+border-radius: 10px; /* Rounded corners */
+font-size: 18px; /* Increase font size */
 }
 
 #myBtn:hover {
-  background-color: #555; /* Add a dark-grey background on hover */
+background-color: #555; /* Add a dark-grey background on hover */
 }
 
 
