--- a/styles.css
+++ b/styles.css
@@ -311,10 +311,12 @@ body {
   clear: both;
 }
 
-/* Six columns side by side */
+/* Three columns side by side */
 .column {
-  float: center;
+  float: cleft;
   width: 25%;
+  padding: 10px;
+  margin: auto;
 }
 
 /* Add a transparency effect for thumnbail images */
@@ -694,6 +696,58 @@ font-size: 18px; /* Increase font size */
 background-color: #555; /* Add a dark-grey background on hover */
 }
 
+/******************************/
+/*     Gallery.html CSS     */
+/******************************/
+
+/* The grid: Four equal columns that floats next to each other */
+.column0 {
+  float: left;
+  width: 25%;
+  padding: 10px;
+}
+
+/* Style the images inside the grid */
+.column0 img {
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+.column0 img:hover {
+  opacity: 1;
+}
+
+/* Clear floats after the columns */
+.row0:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* The expanding image container (positioning is needed to position the close button and the text) */
+.container0 {
+  position: relative;
+  display: none;
+}
+
+/* Expanding image text */
+#imgtext0 {
+  position: absolute;
+  bottom: 15px;
+  left: 15px;
+  color: white;
+  font-size: 20px;
+}
+
+/* Closable button inside the image */
+.closebtn0 {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  color: white;
+  font-size: 35px;
+  cursor: pointer;
+}
 
 /* Responsive layout - when the screen is less than 600px wide, make the three columns stack on top of each other instead of next to each other */
 
