--- a/styles.css
+++ b/styles.css
@@ -410,14 +410,10 @@ body {
   border-radius: 40%;
   }
 
-/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 768px) {
-  .column {
-    width: 100%;
-  }
-}
-
-
+  @media screen and (max-width: 768px) {
+    .column33 {
+      width: 100%;
+    }
 /*..............................Chris Product Page........................................*/
 /* The grid: Four equal columns that floats next to each other */
 .column25 {
