--- a/styles.css
+++ b/styles.css
@@ -113,8 +113,9 @@ body {
   
  .column-right {
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: start;
     padding: 0rem 2rem;
  }
 
