--- a/styles.css
+++ b/styles.css
@@ -648,6 +648,10 @@ text-align: center;
 margin-bottom: 1rem;
 font-size: 5rem;
 }
+.centerr h2 {
+  margin-bottom: 1rem;
+  font-size: 4rem;
+  }
 
 .centerr p {
 margin-bottom: 2rem;
