--- a/styles.css
+++ b/styles.css
@@ -667,6 +667,7 @@ line-height: 1.5;
 background: black;
 border-style: solid;
 opacity: 100%;
+align-items: center;
 }
 
 image.centered{
@@ -733,8 +734,6 @@ margin-right: auto;
   max-height:100%;
   text-align: center;
   vertical-align: middle;
-  margin-left: auto;
-  margin-right: auto;
   }
 
 /*CSS End*/
