--- a/styles.css
+++ b/styles.css
@@ -150,12 +150,13 @@ body {
   padding: 0 16px;
 }
 
-/* Clear floats */
+/* 
 .container::after, .row::after {
   content: "";
   clear: both;
   display: table;
 }
+Clear floats */
 
 .title {
   color: grey;
