--- a/styles.css
+++ b/styles.css
@@ -624,6 +624,8 @@ color: rgb(255, 255, 255);
 margin: 10px;
 width: 250px;
 height: 250px;
+margin-left: auto;
+margin-right: auto;
 line-height: 115px;
 text-align: center;
 border: 1px solid black;
