--- a/styles.css
+++ b/styles.css
@@ -124,7 +124,7 @@ body {
     height: 100%;
  }
 
- /* Three columns side by side */
+ /* Four columns side by side */
 .column {
   float: left;
   width: 33.3%;
