--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 
 /*****************************************
 Table Of Contents:
-- Home
+- Home (Index) Page
 - Navigation
 - Button
 - Grace's Page
