--- a/styles.css
+++ b/styles.css
@@ -193,8 +193,8 @@ body {
 /*     Navigation     */
 /**************************/
 
- /* Navigation Dropdown Menu CSS*/
 
+ /*LOGO*/
  .logo {
   color: #000;
   font-size: 1.5rem;
@@ -203,84 +203,68 @@ body {
   padding: 0 2rem;
 }
 
- /* Navbar container */
+/* Navbar basics */
 .navbar {
-  background-color: #573DFC;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 70px;
+display: flex;
+align-items: center;
+justify-content: space-between;
+padding: 20px;
+background-color: #573DFC;
+color: #fff;
 }
 
-/* Links inside the navbar */
-
-.navbar a {
-  float: left;
-  font-size: 16px;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  display: block;
+.nav-links a {
+color: #fff;
 }
 
-/* The dropdown container */
+/* NAVBAR MENU */
+.menu {
+display: flex;
+gap: 1em;
+font-size: 18px;
+}
+
+.menu li:hover {
+background-color: #573DFC;
+border-radius: 5px;
+transition: 0.3s ease;
+}
+
+.menu li {
+padding: 5px 14px;
+}
+
+/* DROPDOWN MENU */
+
+.services {
+position: relative;
+}
+
 .dropdown {
-  float: left;
-  overflow: hidden;
+background-color:#fff;
+padding: 1em 0;
+position: absolute; /*WITH RESPECT TO PARENT*/
+display: none;
+border-radius: 8px;
+top: 35px;
 }
 
-/* Dropdown button */
-.dropdown .dropbtn {
-  font-size: 16px;
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit; /* Important for vertical align on mobile phones */
-  margin: 0; /* Important for vertical align on mobile phones */
+.dropdown li + li {
+margin-top: 10px;
 }
 
-/* Add a red background color to navbar links on hover */
-.navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: #fff;
-  color: #573DFC;
+.dropdown li {
+padding: 0.5em 1em;
+width: 8em;
+text-align: center;
 }
 
-/* Dropdown content (hidden by default) */
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+.dropdown li:hover {
+background-color: #573DFC;
 }
 
-/* Links inside the dropdown */
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-/* Add a grey background color to dropdown links on hover */
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
-
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-/* Hide the link that should open and close the topnav on small screens */
-.navbar .icon {
-  display: none;
+.services:hover .dropdown {
+display: block;
 }
 
 /* Navigation Dropdown Menu CSS END*/
