--- a/styles.css
+++ b/styles.css
@@ -756,22 +756,47 @@ background-color: #555; /* Add a dark-grey background on hover */
   .container {
     grid-template-columns: 1fr;
   }
-  .navbar a:not(:first-child) {display: none;}
-  .navbar a.icon {
-    float: right;
-    display: block;
+  .menu {
+  display:none;
+  position: absolute;
+  background-color:teal;
+  right: 0;
+  left: 0;
+  text-align: center;
+  padding: 16px 0;
+
   }
-  .navbar.responsive {position: relative;}
-  .navbar.responsive a.icon {
-    position: absolute;
-    right: 0;
-    top: 0;
+
+  .menu li:hover {
+  display: inline-block;
+  background-color:#4c9e9e;
+  transition: 0.3s ease;
+
   }
-  .navbar.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
+
+  .menu li + li {
+  margin-top: 12px;
+
   }
-} 
+
+  input[type=checkbox]:checked ~ .menu{
+  display: block;
+  }
+
+  .hamburger {
+  display: block;
+  }
+
+  .dropdown {
+  left: 50%;
+  top: 30px;
+  transform: translateX(35%);
+  }
+
+  .dropdown li:hover {
+  background-color: #4c9e9e;
+  } 
+}
+
 
 /*Responsive layout end*/
