--- a/styles.css
+++ b/styles.css
@@ -232,30 +232,31 @@ padding: 5px 14px;
 position: relative;
 }
 
-.dropdown {
-background-color:#fff;
-padding: 1em 0;
-position: absolute; /*WITH RESPECT TO PARENT*/
-display: none;
-border-radius: 8px;
-top: 35px;
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
 }
 
-.dropdown li + li {
+.dropdown-content li + li {
 margin-top: 10px;
 }
 
-.dropdown li {
+.dropdown-content li {
 padding: 0.5em 1em;
 width: 8em;
 text-align: center;
 }
 
-.dropdown li:hover {
+.dropdown-content li:hover {
 background-color: #573DFC;
 }
 
-.services:hover .dropdown {
+.services:hover .dropdown-content {
 display: block;
 }
 
