--- a/styles.css
+++ b/styles.css
@@ -240,6 +240,7 @@ position: relative;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+  color: #573DFC;
 }
 
 .dropdown-content li + li {
@@ -768,7 +769,7 @@ background-color: #555; /* Add a dark-grey background on hover */
   .menu {
   display:none;
   position: absolute;
-  background-color:teal;
+  background-color:#573DFC;
   right: 0;
   left: 0;
   text-align: center;
@@ -778,7 +779,7 @@ background-color: #555; /* Add a dark-grey background on hover */
 
   .menu li:hover {
   display: inline-block;
-  background-color:#4c9e9e;
+  background-color:#573DFC;
   transition: 0.3s ease;
 
   }
@@ -803,7 +804,7 @@ background-color: #555; /* Add a dark-grey background on hover */
   }
 
   .dropdown li:hover {
-  background-color: #4c9e9e;
+  background-color: #573DFC;
   } 
 }
 
