--- a/styles.css
+++ b/styles.css
@@ -199,7 +199,7 @@ list-style: none;
 display: flex;
 align-items: center;
 justify-content: space-between;
-padding: 20px;
+padding: 1.1rem;
 background-color: #573DFC;
 color: #fff;
 }
