--- a/styles.css
+++ b/styles.css
@@ -205,7 +205,7 @@ color: #fff;
 }
 
 .nav-links a {
-color: #573DFC;
+color: #fff;
 }
 
 
@@ -236,11 +236,10 @@ position: relative;
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: #573DFC;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
-  color: #573DFC;
 }
 
 .dropdown-content li + li {
