--- a/styles.css
+++ b/styles.css
@@ -129,6 +129,10 @@ body {
   max-height: 550px;
   width: 100%;
   height: 100%;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  
  }
 
  /* Four columns side by side */
