center and syntax

--- a/styles.css
+++ b/styles.css
@@ -135,6 +135,12 @@ body {
   
  }
 
+ .centergeneral{
+  display:flex;
+  align-items: center;
+  justify-content: center;
+ }
+
  /* Four columns side by side */
 .column {
   float: left;
