--- a/styles.css
+++ b/styles.css
@@ -48,8 +48,7 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr;
   height: 95vh;
-  padding: 4rem;
-  align-items: center;
+  padding: 1rem 6.5rem;
 }
 
 .container2{
@@ -168,11 +167,6 @@ body {
 /* Add some shadows to create a card effect */
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-}
-
-/* Some left and right padding inside the container */
-.container {
-  padding: 0 16px;
 }
 
 /* Clear floats */
