--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,16 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr;
   height: 95vh;
+  padding: 0.5rem 1.33rem;
+}
+
+.containerindex {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  height: 95vh;
   padding: 1rem 6.5rem;
+  border-style: dashed;
+  border-color: #573DFC;
 }
 
 .container2{
@@ -130,8 +139,8 @@ body {
   width: 100%;
   height: 100%;
   display:flex;
-  align-items: center;
-  justify-content: center;
+  align-items:flex-end;
+  justify-content:right;
   
  }
 
