--- a/styles.css
+++ b/styles.css
@@ -125,6 +125,14 @@ body {
  }
 
  /* Four columns side by side */
+ html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 .column {
   float: left;
   width: 25%;
@@ -140,7 +148,7 @@ body {
 }
 
 /* Display the columns below each other instead of side by side on small screens */
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 770px) {
   .column {
     width: 100%;
     display: block;
@@ -166,6 +174,8 @@ body {
 
 .title {
   color: grey;
+  text-align: left;
+  
 }
 
 /* CSS End */
