--- a/styles.css
+++ b/styles.css
@@ -180,6 +180,11 @@ body {
   text-align: center;
 }  
 
+.naming {
+  color: black;
+  text-align: center;
+  }
+  
 /* Display the columns below each other instead of side by side on small screens */
 @media screen and (max-width: 770px) {
   .column {
