--- a/styles.css
+++ b/styles.css
@@ -149,7 +149,6 @@ body {
   justify-content: center;
  }
 
- /* Four columns side by side */
  html {
   box-sizing: border-box;
 }
@@ -158,29 +157,13 @@ body {
   box-sizing: inherit;
 }
 
-.column {
+.columnn {
   float: left;
-  width: 25%;
-  margin-bottom: 12px;
-  padding: 5px;
+  width: 33.3%;
+  margin-bottom: 5px;
+  padding: 0 8px;
 }
 
-/* Image dimensions */
-.responsive3 {
-  max-width: 250px;
-  height: auto;
-  width: 100%;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.naming {
-  color: black;
-  text-align: center;
-  }
-  
-/* Display the columns below each other instead of side by side on small screens */
 @media screen and (max-width: 770px) {
   .column {
     width: 100%;
@@ -188,22 +171,39 @@ body {
   }
 }
 
-/* Add some shadows to create a card effect */
-.card {
+.cardd {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
-/* Clear floats */
-.container::after, .row::after {
+.containerr {
+  padding: 0 16px;
+}
+
+.containerr::after, .roww::after {
   content: "";
   clear: both;
   display: table;
 }
 
-.title {
+.titlee {
   color: grey;
-  text-align: left;
-  
+  text-align: center;
+}
+
+.button3 {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+}
+
+.button3:hover {
+  background-color: #555;
 }
 
 /* CSS End */
