--- a/styles.css
+++ b/styles.css
@@ -159,9 +159,9 @@ body {
 
 .columnn {
   float: left;
-  width: 25%;
-  margin-bottom: 5px;
-  padding: 0 8px;
+  width: 50%;
+  margin-bottom: 8px;
+  padding: 2px;
 }
 
 @media screen and (max-width: 770px) {
