--- a/styles.css
+++ b/styles.css
@@ -159,9 +159,19 @@ body {
 
 .columnn {
   float: left;
-  width: 50%;
-  margin-bottom: 8px;
-  padding: 2px;
+  width: 25%;
+  margin-bottom: 12px;
+  padding: 5px;
+}
+
+/* Image dimensions */
+.responsive3 {
+  max-width: 250px;
+  height: auto;
+  width: 100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @media screen and (max-width: 770px) {
