--- a/styles.css
+++ b/styles.css
@@ -200,6 +200,11 @@ body {
   text-align: center;
 }
 
+.headerr {
+  color: black;
+  text-align: center;
+}
+
 .button3 {
   border: none;
   outline: 0;
