--- a/styles.css
+++ b/styles.css
@@ -158,7 +158,8 @@ body {
 }
 
 .columnn {
-  float: left;
+  margin-left: auto;
+  margin-right: auto;
   width: 25%;
   margin-bottom: 16px;
   padding: 5px;
@@ -170,6 +171,8 @@ body {
   height: auto;
   width: 100%;
   display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @media screen and (max-width: 770px) {
