--- a/styles.css
+++ b/styles.css
@@ -732,9 +732,12 @@ opacity: 100%;
 align-items: center;
 }
 
-image.floaterl{
-display: block;
-float:right;
+.imagerr {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 100%;
+	height: auto;
 }
 
 #PLayout13{
