--- a/styles.css
+++ b/styles.css
@@ -725,6 +725,12 @@ line-height: 1.5;
 
 /*CSS Start*/
 
+.header3 {  
+  text-align: center;
+	font-size: 50px;
+	font-family: Garamond;
+}
+
 .background000{
 background: black;
 border-style: solid;
