--- a/styles.css
+++ b/styles.css
@@ -814,6 +814,16 @@ align-items: center;
   display: table;
 }
 
+/* Image dimensions */
+.responsive2 {
+  max-width: 1000px;
+  height: auto;
+  width: 100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /*CSS End*/
 
 
