--- a/styles.css
+++ b/styles.css
@@ -477,7 +477,7 @@ input[type=checkbox]{
   margin-right: auto;
   }
 
-  #PLayout1{
+  .PLayout1{
   display: block;
   font-size: 1.5rem;
   color: #fff;
@@ -493,7 +493,7 @@ input[type=checkbox]{
   text-align: center; 
   }
 
-  #PLayout2{
+  .PLayout2{
   display: block;
   font-size: 0.90rem;
   color: rgb(83, 79, 79);
