--- a/styles.css
+++ b/styles.css
@@ -262,6 +262,7 @@ align-items: center;
 justify-content: space-between;
 background-color: #573DFC;
 color: #fff;
+padding: 1.33rem
 }
 
 .nav-links a {
