--- a/styles.css
+++ b/styles.css
@@ -294,7 +294,6 @@ padding: 5px 14px;
 
 .services {
 position: relative;
-padding-bottom: 0.8rem;
 }
 
 /* Dropdown content (hidden by default) */
@@ -347,7 +346,7 @@ input[type=checkbox]{
 /*     About Us Page    */
 /**************************/
 
-#nameid{
+.nameid{
   font-size: 1.33rem;
   color:#573DFC;
   font-style: italic;
