--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,15 @@
 
 /*****************************************
 Table Of Contents:
-- Home (Index) Page
-- Navigation
-- Button
-- Grace's Page
-- Chris' Page
-- Will's Page
-- Ryan's Page
-- Responsive Layout
-- Back to Top Button
+- Home (Index) Page (Owner: Ryan and Grace)
+- Navigation (Owner: Grace)
+- Button (Owner: Grace)
+- Grace's Page (Owner: Grace)
+- Chris' Page (Owner: Chris)
+- Will's Page (Owner: Will)
+- Ryan's Page (Owner: Ryan)
+- Responsive Layout (Owner: Grace)
+- Back to Top Button (Owner: Ryan)
 ******************************************/
 
 
