--- a/styles.css
+++ b/styles.css
@@ -262,7 +262,7 @@ align-items: center;
 justify-content: space-between;
 background-color: #573DFC;
 color: #fff;
-padding: 1rem
+padding: 1.33rem
 }
 
 .nav-links a {
@@ -320,7 +320,7 @@ text-align: center;
 background-color: #573DFC;
 }
 
-.services .dropdown-content:hover {
+.services:hover .dropdown-content {
 display: block;
 }
 
@@ -660,6 +660,13 @@ margin-right: auto;
 }
 
 #Section70{
+  display: block;
+  font-size: 1rem;
+  color: rgb(255, 255, 255);
+  text-align: center;
+}
+
+#Section79{
   display: block;
   font-size: 1rem;
   color: rgb(255, 255, 255);
