--- a/styles.css
+++ b/styles.css
@@ -262,6 +262,7 @@ align-items: center;
 justify-content: space-between;
 background-color: #573DFC;
 color: #fff;
+padding: 1.33rem
 }
 
 .nav-links a {
@@ -686,6 +687,13 @@ margin-right: auto;
   }
 
 #Section81{
+  display: block;
+  font-size: 0.90rem;
+  color: rgb(0, 0, 0);
+  text-align: center;
+} 
+
+#Section82{
   display: block;
   font-size: 0.90rem;
   color: rgb(0, 0, 0);
