--- a/styles.css
+++ b/styles.css
@@ -280,13 +280,13 @@ gap: 1em;
 font-size: 18px;
 }
 
-.menu li:hover {
+.dropdown-content li:hover {
 background-color: #573DFC;
 border-radius: 5px;
 transition: 0.3s ease;
 }
 
-.menu li {
+.dropdown-content li {
 padding: 5px 14px;
 }
 
@@ -316,9 +316,9 @@ width: 8em;
 text-align: center;
 }
 
-.dropdown-content li:hover {
+/* .dropdown-content li:hover {
 background-color: #573DFC;
-}
+} */
 
 .services:hover .dropdown-content {
 display: block;
