--- a/styles.css
+++ b/styles.css
@@ -321,7 +321,7 @@ background-color: #573DFC;
 }
 
 .services:hover .dropdown-content {
-display: block;
+display: block !important; 
 }
 
 /*RESPONSIVE NAVBAR MENU*/
