--- a/styles.css
+++ b/styles.css
@@ -737,7 +737,7 @@ align-items: center;
 text-align: center;
 }
 
-.centerr{
+.centerr2{
   justify-content: center;
   padding: 3rem;
   color:  rgb(255, 255, 255);
