--- a/styles.css
+++ b/styles.css
@@ -283,11 +283,11 @@ font-size: 18px;
 .menu li:hover {
 background-color: #573DFC;
 border-radius: 5px;
-transition: 0.3s ease;
+transition: 0.5s ease !important;
 }
 
 .menu li {
-padding: 5px 14px;
+padding: 5px 14px !important;
 }
 
 /* DROPDOWN MENU */
