--- a/styles.css
+++ b/styles.css
@@ -888,9 +888,29 @@ border-radius: 10px; /* Rounded corners */
 font-size: 18px; /* Increase font size */
 }
 
+#myBtnn {
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: rgb(76, 0, 255); /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 15px; /* Some padding */
+  border-radius: 10px; /* Rounded corners */
+  font-size: 18px; /* Increase font size */
+  }
+
 #myBtn:hover {
 background-color: #555; /* Add a dark-grey background on hover */
 }
+
+#myBtnn:hover {
+  background-color: #555; /* Add a dark-grey background on hover */
+  }
 /* Responsive layout - when the screen is less than 600px wide, make the three columns stack on top of each other instead of next to each other */
 
 @media screen and (max-width: 768px) {
