--- a/styles.css
+++ b/styles.css
@@ -268,6 +268,7 @@ padding: 1rem;
 .nav-links a {
 color: #fff;
 align-items: center;
+padding: 1rem;
 }
 
 
@@ -307,7 +308,7 @@ padding: 1rem;
 }
 
 .dropdown-content li + li {
-margin-top: 16px;
+margin-top: 10px;
 }
 
 .dropdown-content li {
