--- a/styles.css
+++ b/styles.css
@@ -294,6 +294,7 @@ padding: 8px 14px !important;
 
 .services {
 position: relative;
+padding-bottom: 9px;
 }
 
 /* Dropdown content (hidden by default) */
