--- a/styles.css
+++ b/styles.css
@@ -229,6 +229,23 @@ body {
 /*     Navigation     */
 /**************************/
 
+a {
+  text-decoration: none;
+  }
+  
+  .list1 {
+  list-style: none;
+  }
+  
+  .list2 {
+  list-style: none;
+  padding: 0px;
+  }
+  
+  .list2::before{
+    content: '\27A5';
+  }
+  
 
  /*LOGO*/
  .logo {
@@ -246,13 +263,13 @@ align-items: center;
 justify-content: space-between;
 background-color: #573DFC;
 color: #fff;
-padding: 0.8rem;
+padding: 1.33rem;
 }
 
 .nav-links a {
 color: #fff;
-align-items: center;
 padding: 1rem;
+align-items: center;
 }
 
 
@@ -267,18 +284,17 @@ padding: 1rem;
 .menu li:hover {
 background-color: #573DFC;
 border-radius: 5px;
-transition: 0.3s ease !important;
+transition: 0.5s ease !important;
 }
 
 .menu li {
-padding: 8px 14px !important;
+padding: 5px 14px !important;
 }
 
 /* DROPDOWN MENU */
 
 .services {
 position: relative;
-padding-bottom: 9px;
 }
 
 /* Dropdown content (hidden by default) */
@@ -292,11 +308,11 @@ padding-bottom: 9px;
 }
 
 .dropdown-content li + li {
-margin-top: 10px;
+margin-top: 16px;
 }
 
 .dropdown-content li {
-padding: 0.5em 0.5em;
+padding: 0.5em 1em;
 width: 8em;
 text-align: center;
 }
@@ -873,29 +889,9 @@ border-radius: 10px; /* Rounded corners */
 font-size: 18px; /* Increase font size */
 }
 
-#myBtnn {
-  display: none; /* Hidden by default */
-  position: fixed; /* Fixed/sticky position */
-  bottom: 20px; /* Place the button at the bottom of the page */
-  right: 30px; /* Place the button 30px from the right */
-  z-index: 99; /* Make sure it does not overlap */
-  border: none; /* Remove borders */
-  outline: none; /* Remove outline */
-  background-color: rgb(76, 0, 255); /* Set a background color */
-  color: white; /* Text color */
-  cursor: pointer; /* Add a mouse pointer on hover */
-  padding: 15px; /* Some padding */
-  border-radius: 10px; /* Rounded corners */
-  font-size: 18px; /* Increase font size */
-  }
-
 #myBtn:hover {
 background-color: #555; /* Add a dark-grey background on hover */
 }
-
-#myBtnn:hover {
-  background-color: #555; /* Add a dark-grey background on hover */
-  }
 /* Responsive layout - when the screen is less than 600px wide, make the three columns stack on top of each other instead of next to each other */
 
 @media screen and (max-width: 768px) {
